paper_experimental_results/2026-05-06T18-03-03/grok-code-fast-1/expressions/comma_op_1/sample_005/target.compile.log
error[E0277]: `main` has invalid return type `i32`
 --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/expressions/comma_op_1/sample_005/target.rs:5:14
  |
5 | fn main() -> i32 {
  |              ^^^ `main` can only return types that implement `Termination`
  |
  = help: consider using `()`, or a `Result`

warning: value assigned to `t` is never read
 --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/expressions/comma_op_1/sample_005/target.rs:8:13
  |
8 |     let mut t = 0;
  |             ^
  |
  = help: maybe it is overwritten before being read?
  = note: `#[warn(unused_assignments)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `t1`
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/expressions/comma_op_1/sample_005/target.rs:16:14
   |
16 |     if { let t1 = 3; t + 2 } != 5 {
   |              ^^ help: if this is intentional, prefix it with an underscore: `_t1`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: variable does not need to be mutable
 --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/expressions/comma_op_1/sample_005/target.rs:6:9
  |
6 |     let mut a = 0;
  |         ----^
  |         |
  |         help: remove this `mut`
  |
  = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: variable does not need to be mutable
 --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/expressions/comma_op_1/sample_005/target.rs:7:9
  |
7 |     let mut c = 0;
  |         ----^
  |         |
  |         help: remove this `mut`

error: aborting due to 1 previous error; 4 warnings emitted

For more information about this error, try `rustc --explain E0277`.